<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/img_1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="10sp"
            android:backgroundTint="#55f"
            android:text="@string/btnBack" />

        <EditText
            android:id="@+id/etGameName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/etGameName"
            android:inputType="text"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/etDate"
            android:inputType="text"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etMinutes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/etMinutes"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="35dp"
            android:textColorHint="@color/black" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="5sp"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/radioAction"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radioAction" />

            <RadioButton
                android:id="@+id/radioSimulation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radioSimulation" />

            <RadioButton
                android:id="@+id/radioSport"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radioSport" />

            <RadioButton
                android:id="@+id/radioAdventure"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/radioAdventure" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5sp"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/radioRatingOne"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/radioRatingOne" />

            <RadioButton
                android:id="@+id/radioRatingTwo"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/radioRatingTwo" />

            <RadioButton
                android:id="@+id/radioRatingThree"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/radioRatingThree" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAddEntry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:backgroundTint="#55f"
            android:text="@string/btnAddEntry" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#55f"
            android:text="@string/btnClear" />

        <Button
            android:id="@+id/btnDetailViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:backgroundTint="#55f"
            android:text="@string/btnDetailViews" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>